--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
                 <executions>
                     <execution>
                         <id>integration-test</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>install</goal>
                             <goal>run</goal>
